<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <!-- Main destination - Case Management -->
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.verumdec.ui.MainFragment"
        android:label="@string/app_name">
        
        <action
            android:id="@+id/action_main_to_verify"
            app:destination="@id/verifyDocumentActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        
        <action
            android:id="@+id/action_main_to_analysis"
            app:destination="@id/analysisActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Verify Document Activity -->
    <activity
        android:id="@+id/verifyDocumentActivity"
        android:name="com.verumdec.ui.VerifyDocumentActivity"
        android:label="@string/title_verify_document">
        
        <argument
            android:name="caseId"
            app:argType="string"
            app:nullable="true" />
    </activity>

    <!-- Analysis Activity -->
    <activity
        android:id="@+id/analysisActivity"
        android:name="com.verumdec.ui.AnalysisActivity"
        android:label="Analysis Results">
        
        <argument
            android:name="caseId"
            app:argType="string" />
        
        <action
            android:id="@+id/action_analysis_to_timeline"
            app:destination="@id/evidenceTimelineActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        
        <action
            android:id="@+id/action_analysis_to_report"
            app:destination="@id/forensicReportViewerActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </activity>

    <!-- Evidence Timeline Activity -->
    <activity
        android:id="@+id/evidenceTimelineActivity"
        android:name="com.verumdec.ui.EvidenceTimelineActivity"
        android:label="@string/title_timeline">
        
        <argument
            android:name="caseId"
            app:argType="string" />
    </activity>

    <!-- Forensic Report Viewer Activity -->
    <activity
        android:id="@+id/forensicReportViewerActivity"
        android:name="com.verumdec.ui.ForensicReportViewerActivity"
        android:label="@string/title_report_viewer">
        
        <argument
            android:name="pdfPath"
            app:argType="string" />
    </activity>

</navigation>
